fix: fix hover on mobile devices

--- a/src/blocks/place/__like/place__like.css
+++ b/src/blocks/place/__like/place__like.css
@@ -10,7 +10,9 @@
   background-color: transparent;
 }
 
-.place__like:hover {
-  opacity: 0.5;
-  cursor: pointer;
+@media (hover: hover) and (pointer: fine) {
+  .place__like:hover {
+    opacity: 0.5;
+    cursor: pointer;
+  }
 }
